test booking confirm host

--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -614,7 +614,7 @@
                                   ${{subtotal}}
                                 </td>
                               </tr>
-                              <!-- <tr>
+                              <tr>
                                 <td
                                   align="left"
                                   valign="top"
@@ -627,9 +627,9 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  ${{valueDiscount}}
+                                  ${{discountValue}}
                                 </td>
-                              </tr> -->
+                              </tr>
                               <tr>
                                 <td
                                   align="left"
