calculation prices with voucher

--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -614,6 +614,7 @@
                                   ${{subtotal}}
                                 </td>
                               </tr>
+                              {{#if discountValue > 0}}
                               <tr>
                                 <td
                                   align="left"
@@ -630,6 +631,7 @@
                                   ${{discountValue}}
                                 </td>
                               </tr>
+                              {{/if}}
                               <tr>
                                 <td
                                   align="left"
