calculation prices with voucher

--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -614,7 +614,7 @@
                                   ${{subtotal}}
                                 </td>
                               </tr>
-                              {{#if discountValue > 0}}
+                              {{#if discountValue}}
                               <tr>
                                 <td
                                   align="left"
