instant guest with voucher

--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -628,7 +628,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  ${{discountValue}}
+                                  (${{discountValue}})
                                 </td>
                               </tr>
                               {{/if}}
