reverse html change fix

--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -822,128 +822,119 @@
                                     style="width: 350px; display: inline-block; vertical-align: top;"
                                     class="container"
                                   >
-                                    <table
-                                      width="350"
-                                      align="center"
-                                      cellpadding="0"
-                                      cellspacing="0"
-                                      border="0"
-                                      style="border-collapse: collapse; width: 350px; max-width: 350px;"
-                                      class="container244"
+                                  <table
+                                  width="350"
+                                  align="center"
+                                  cellpadding="0"
+                                  cellspacing="0"
+                                  border="0"
+                                  style="border-collapse: collapse; width: 350px; max-width: 350px;"
+                                  class="container244"
+                                >
+                                  <tr>
+                                    <td height="17" style="font-size: 0; line-height: 17px;">&nbsp;</td>
+                                  </tr>
+                                  <tr>
+                                    <td
+                                      align="left"
+                                      valign="top"
+                                      style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:18px; mso-line-height-rule:exactly;line-height:22px;color:#1F252A;"
                                     >
-
-                                      <tr>
-                                        <td height="17" style="font-size: 0; line-height: 17px;">&nbsp;</td>
-                                      </tr>
-                                      <tr>
-                                        <td valign="top" align="center">
-                                          <table
-                                            align="left"
-                                            cellpadding="0"
-                                            cellspacing="0"
-                                            border="0"
-                                            style="border-collapse: collapse;"
+                                    {{ listTitle }}
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td
+                                      align="left"
+                                      valign="top"
+                                      style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#1F252A;"
+                                    >
+                                    {{ listAddress }}
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td
+                                      align="left"
+                                      valign="top"
+                                      style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600; font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#1F252A;"
+                                    >
+                                      <strong>${{basePrice}}</strong> <span style="font-size: 8px;">{{priceType}}</span>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td valign="top" align="center">
+                                      <table
+                                        align="left"
+                                        cellpadding="0"
+                                        cellspacing="0"
+                                        border="0"
+                                        style="border-collapse: collapse;"
+                                      >
+                                        <tr>
+                                          <td width="17"></td>
+                                          <td
+                                            align="center"
+                                            valign="top"
+                                            style="border: 1px solid #CBCBCB; border-radius: 4px; display: inline-block;"
                                           >
-                                            <tr>
-                                              <td width="17"></td>
-                                              <td
-                                                align="center"
-                                                valign="top"
-                                                style="border: 1px solid #CBCBCB; border-radius: 4px; display: inline-block;"
-                                              >
-                                                <table
-                                                  width="99"
-                                                  align="center"
-                                                  border="0"
-                                                  cellspacing="0"
-                                                  cellpadding="0"
-                                                  style="width: 99px;"
-                                                >
-                                                  <tr>
-                                                    <td valign="top" align="center">
-                                                      <table
-                                                        align="center"
-                                                        cellpadding="0"
-                                                        cellspacing="0"
-                                                        border="0"
-                                                        style="border-collapse: collapse;"
-                                                      >
-                                                        <tr>
-                                                          <td height="38" align="center" valign="middle">
-                                                            <img
-                                                              src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_08_icon1.png"
-                                                              alt=""
-                                                              title=""
-                                                              width="32"
-                                                              style="outline: none"
-                                                              border="0"
-                                                            />
-                                                          </td>
-                                                          <td
-                                                            height="38"
-                                                            align="center"
-                                                            valign="middle"
-                                                            style="padding-top: 1px; color: #172439;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600;font-size: 12px; line-height: 14px;"
-                                                          >
-                                                            <a
-                                                              href="#"
-                                                              target="_blank"
-                                                              style="color: #172439; text-decoration: none;"
-                                                              >&nbsp;{{category}}&nbsp;</a
-                                                            >
-                                                          </td>
-                                                        </tr>
-                                                      </table>
-                                                    </td>
-                                                  </tr>
-                                                </table>
-                                              </td>
-                                              <td width="17"></td>
-                                            </tr>
-                                          </table>
-                                        </td>
-                                      </tr>
-                                      <tr>
-                                        <td height="17" style="font-size: 0; line-height: 17px;">&nbsp;</td>
-                                      </tr>
-                                      <tr>
-                                        <td
-                                          align="left"
-                                          valign="top"
-                                          style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:18px; mso-line-height-rule:exactly;line-height:22px;color:#1F252A;"
-                                        >
-                                          <span  style="white-space: nowrap;
-                                          overflow: hidden !important;
-                                          text-overflow: ellipsis;width: 300px">{{listTitle}}</span>
-                                        </td>
-                                      </tr>
-                                      <tr>
-                                        <td
-                                          align="left"
-                                          valign="top"
-                                          style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#1F252A;"
-                                        >
-                                          {{listAddress}}
-                                        </td>
-                                      </tr>
-                                      <tr>
-                                        <td height="17" >&nbsp;
-                                        <div style="font-size: 0; line-height: 17px;border-top: 1px solid #cccccc; width:300px;padding-bottom: 15px;width: 330px"></div></td>
-                                      </tr>
-                                      <tr>
-                     
-                                            <td
-                                              align="left"
-                                              valign="top"
-                                              style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600; font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#1F252A;"
+                                            <table
+                                              width="99"
+                                              align="center"
+                                              border="0"
+                                              cellspacing="0"
+                                              cellpadding="0"
+                                              style="width: 99px;"
                                             >
-                                              <span style="font-size: 9px;" >From</span> <strong> ${{basePrice}}</strong> <span style="font-size: 8px;">{{priceType}}</span>
-                                            </td>
-                                   
-                                          </tr>
-
-                           
-                                    </table>
+                                              <tr>
+                                                <td valign="top" align="center">
+                                                  <table
+                                                    align="center"
+                                                    cellpadding="0"
+                                                    cellspacing="0"
+                                                    border="0"
+                                                    style="border-collapse: collapse;"
+                                                  >
+                                                    <tr>
+                                                      <td height="38" align="center" valign="middle">
+                                                        <img
+                                                          src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_08_icon1.png"
+                                                          alt=""
+                                                          title=""
+                                                          width="32"
+                                                          style="outline: none"
+                                                          border="0"
+                                                        />
+                                                      </td>
+                                                      <td
+                                                        height="38"
+                                                        align="center"
+                                                        valign="middle"
+                                                        style="padding-top: 1px; color: #172439;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600;font-size: 12px; line-height: 14px;"
+                                                      >
+                                                        <a
+                                                          href="#"
+                                                          target="_blank"
+                                                          style="color: #172439; text-decoration: none;"
+                                                          >&nbsp;{{category}}&nbsp;</a
+                                                        >
+                                                      </td>
+                                                    </tr>
+                                                  </table>
+                                                </td>
+                                              </tr>
+                                            </table>
+                                          </td>
+                                          <td width="17"></td>
+                                        </tr>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td class="vspace30" height="17" style="font-size: 0; line-height: 17px;">
+                                      &nbsp;
+                                    </td>
+                                  </tr>
+                                </table>
                                   </div>
                                   <!--[if (gte mso 9)|(IE)]></td></tr>
                                                         </table> <![endif]-->
