--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -446,7 +446,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:21px; mso-line-height-rule:exactly;line-height:25px;color:#172439;"
                                 >
-                                  {{guestName}}
+                                  {{hostName}}
                                 </td>
                               </tr>
                             </table>
