--- a/templates/message-notification-host.html
+++ b/templates/message-notification-host.html
@@ -517,7 +517,7 @@
                             align="center"
                           >
                             <a
-                              href="{{ appLink }}/message/{{ messageId }}"
+                              href="{{ appLink }}/account/message/{{ messageId }}"
                               target="_blank"
                               style="color: #ffffff; text-decoration: none; display: inline-block;"
                               >Reply</a
