--- a/templates/report-listing.html
+++ b/templates/report-listing.html
@@ -588,7 +588,7 @@
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td
-                            bgcolor="#6ADC91"
+                            bgcolor="#2DA577"
                             style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                             align="center"
                           >
@@ -638,7 +638,7 @@
             class="container"
           >
             <tr>
-              <td class="vspace35" height="80" style="font-size: 0; line-height:80px;">&nbsp;</td>
+              <td class="vspace35" height="45" style="font-size: 0; line-height:45px;">&nbsp;</td>
             </tr>
             <tr>
               <td align="center" valign="top">
