testing complete listing

--- a/templates/complete-listing-host.html
+++ b/templates/complete-listing-host.html
@@ -417,7 +417,7 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
                     >
-                      Congratulations on starting your&nbsp;{{ listTitle }}. With just a few more steps, you'll be ready
+                      Congratulations on starting your&nbsp;{{ listingTitle }}. With just a few more steps, you'll be ready
                       to receive your first booking requests.
                     </td>
                   </tr>
