testing complete listing

--- a/templates/complete-listing-host.html
+++ b/templates/complete-listing-host.html
@@ -668,7 +668,7 @@
                                                           </tr>
                                                         </table>
                                                       </td>
-                                                      <td align="left" valign="middle">
+                                                      <!-- <td align="left" valign="middle">
                                                         <img
                                                                 src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/starts.png"
                                                                 alt=""
@@ -677,7 +677,7 @@
                                                                 style="outline: none"
                                                                 border="0"
                                                                 />
-                                                      </td>
+                                                      </td> -->
                                                     </tr>
                                                   </table>
                                                 </td>
