--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -822,7 +822,7 @@
                                                     alt=""
                                                     title=""
                                                     width="243"
-                                                    style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 180px;object-fit: cover;"
+                                                    style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 186px;object-fit: cover;"
                                                     border="0"
                                                     class="full_img480"
                                                     />
@@ -1002,7 +1002,7 @@
                                                           </tr>
                                                         </table>
                                                       </td>
-                                                      <td align="left" valign="middle">
+                                                      <!-- <td align="left" valign="middle">
                                                         <img
                                                                 src="icons/starts.png"
                                                                 alt=""
@@ -1011,7 +1011,7 @@
                                                                 style="outline: none"
                                                                 border="0"
                                                                 />
-                                                      </td>
+                                                      </td> -->
                                                     </tr>
                                                   </table>
                                                 </td>
