test booking request emails

--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -967,7 +967,7 @@
                                                               {{capacity}}</td>
                                                             <td align="left" valign="middle">
                                                               <img
-                                                                      src="icons/person1.png"
+                                                                      src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/person1.png"
                                                                       alt=""
                                                                       title=""
                                                                       width="14"
@@ -989,7 +989,7 @@
                                                           <tr>
                                                             <td align="left" valign="middle">
                                                               <img
-                                                                      src="icons/time.png"
+                                                                      src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/time.png"
                                                                       alt=""
                                                                       title=""
                                                                       width="15"
@@ -1004,7 +1004,7 @@
                                                       </td>
                                                       <!-- <td align="left" valign="middle">
                                                         <img
-                                                                src="icons/starts.png"
+                                                                src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/starts.png"
                                                                 alt=""
                                                                 title=""
                                                                 width="63"
