--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -408,7 +408,7 @@
                     >
                       {{ guestName }}&nbsp;wants to book your space:&nbsp;{{ listTitle }}&nbsp;from&nbsp;{{ checkInDate }}&nbsp;to&nbsp;
                       {{ checkOutDate }}. This booking will earn you a cool&nbsp;${{ total }}. Based on&nbsp;${{ basePrice }}&nbsp;per&nbsp;
-                      {{term}}. <br /><br />
+                      {{termSingular}}. <br /><br />
                       Your new guest:
                     </td>
                   </tr>
