--- a/templates/booking-expiry-email-guest.html
+++ b/templates/booking-expiry-email-guest.html
@@ -552,7 +552,7 @@
                                               alt=""
                                               title=""
                                               width="243"
-                                              style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 180px;object-fit: cover;"
+                                              style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 186px;object-fit: cover;"
                                               border="0"
                                               class="full_img480"
                                             />
@@ -732,7 +732,7 @@
                                                           </tr>
                                                         </table>
                                                       </td>
-                                                      <td align="left" valign="middle">
+                                                      <!-- <td align="left" valign="middle">
                                                         <img
                                                                 src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/starts.png"
                                                                 alt=""
@@ -741,7 +741,7 @@
                                                                 style="outline: none"
                                                                 border="0"
                                                                 />
-                                                      </td>
+                                                      </td> -->
                                                     </tr>
                                                   </table>
                                                 </td>
