--- a/templates/booking-declined-email.html
+++ b/templates/booking-declined-email.html
@@ -372,7 +372,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="24" style="font-size: 0; line-height:24px;">&nbsp;</td>
+                    <td height="28" style="font-size: 0; line-height:28px;">&nbsp;</td>
                   </tr>
                   <tr>
                     <td
@@ -395,7 +395,7 @@
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td
-                            bgcolor="#6ADC91"
+                            bgcolor="#2DA577"
                             style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                             align="center"
                           >
@@ -445,7 +445,7 @@
             class="container"
           >
             <tr>
-              <td class="vspace35" height="80" style="font-size: 0; line-height:80px;">&nbsp;</td>
+              <td class="vspace35" height="45" style="font-size: 0; line-height:45px;">&nbsp;</td>
             </tr>
             <tr>
               <td align="center" valign="top">
