listing publish confirm

--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -1104,7 +1104,7 @@
                             align="center"
                           >
                             <a
-                              href="https://app.spacenow.com/account/booking"
+                              href="{{appLink}}/account/booking"
                               target="_blank"
                               style="color: #ffffff; text-decoration: none; display: inline-block;"
                               >Finalize your booking</a
