test timed out booking

--- a/templates/booking-timedout-guest.html
+++ b/templates/booking-timedout-guest.html
@@ -875,6 +875,7 @@
                                     </table>
                                 </td>
                             </tr>
+                            <tr><td height="45" style="font-size: 0; line-height:45px;" class="brd_top">&nbsp;</td></tr>
                             <tr>
                                 <td align="center" valign="top" style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600; font-size:19px; mso-line-height-rule:exactly;line-height:26px;color:#172439;">
                                     The Spacenow Team
@@ -882,7 +883,7 @@
                             </tr>
                         </table>
                     </td>
-                    <td width="20">&nbsp;</td>
+                    <!-- <td width="20">&nbsp;</td> -->
                 </tr>
             </table>
         </td>
