--- a/templates/booking-timedout-guest.html
+++ b/templates/booking-timedout-guest.html
@@ -261,7 +261,7 @@
                                     <table align="left" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                                         <tr>
                                             <td align="left" valign="top">
-                                                <img class="img95" src="{{guestPhoto}}" alt="" width="113" border="0" style="display: block; outline: none;"/>
+                                                <img class="img95" src="{{guestPhoto}}" alt="" width="113" border="0" style="display: block; outline: none;border-radius: 50%;object-fit: cover;"/>
                                             </td>
                                             <td width="20" class="space15">&nbsp;</td>
                                             <td align="center" valign="middle">
