change publish listing

--- a/templates/publish-listing-confirmation.html
+++ b/templates/publish-listing-confirmation.html
@@ -413,22 +413,13 @@
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;"
                     >
                       Your listing is now live.<br />
-                      View your space to make sure your information is correct and update your availability as it
+                      View your space below to make sure your information is correct and update your availability as it
                       changes.
                       <br />We’ll contact you each time you have a booking.
                     </td>
                   </tr>
                   <tr>
                     <td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td
-                      align="left"
-                      valign="top"
-                      style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;"
-                    >
-                      View your space:
-                    </td>
                   </tr>
                   <tr>
                     <td height="32" style="font-size: 0; line-height:32px;">&nbsp;</td>
