remove space timedout

--- a/templates/booking-timedout-guest.html
+++ b/templates/booking-timedout-guest.html
@@ -933,7 +933,7 @@
                 <tr>
                     <td class="txt14" align="center" valign="top" style="padding: 0px 18px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:11px; mso-line-height-rule:exactly;line-height:20px;color:#939393;">
                         You received this email because you are subscribed to notiﬁcations from Spacenow.
-                        <br/><br class="mobile-hide"/>Update your <a href="#" style="text-decoration: none;color:#939393;">email preferences</a> to choose the type of emails you receive.
+                        <br class="mobile-hide"/>Update your <a href="#" style="text-decoration: none;color:#939393;">email preferences</a> to choose the type of emails you receive.
                     </td>
                 </tr>
                 <tr><td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
